[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pychirpha"
version = "1.1.3"
description = "ChirpStack-Home Assistant integration library via MQTT"
authors = [{name="modrisb"}]
dependencies = ["paho-mqtt==2.1.0", "chirpstack-api==4.17.0", "dukpy==0.5.1"]